@@ -206,16 +206,18 @@ module.exports = function (http2, agent, { enabled }) {
 
   function wrapRequest (orig, host) {
     return function (headers) {
+      agent.logger.debug('intercepted call to http2.request')
       var method = headers[':method'] || 'GET'
-      var span = agent.startSpan(null, 'external', 'http', method)
-      var id = span && span.transaction.id
+      const span = ins.createSpan(null, 'external', 'http', method)
+      if (!span) {
+        return orig.apply(this, arguments)
+      }
 
-      agent.logger.debug('intercepted call to http2.request %o', { id })
+      const parentRunContext = ins.currRunContext()
+      const spanRunContext = parentRunContext.enterSpan(span)
+      var req = ins.withRunContext(spanRunContext, orig, this, ...arguments)
 
-      var req = orig.apply(this, arguments)
-      if (!span) return req
-
-      ins.bindEmitter(req)
+      ins.bindEmitterToRunContext(parentRunContext, req)
 
       var urlObj = parseUrl(headers[':path'])
       var path = urlObj.pathname
@@ -228,7 +230,7 @@ module.exports = function (http2, agent, { enabled }) {
       })
 
       req.on('end', () => {
-        agent.logger.debug('intercepted http2 client end event %o', { id })
+        agent.logger.debug('intercepted http2 client end event')
 
         span.setHttpContext({
           method,
