@@ -278,7 +278,7 @@ isSecure.forEach(secure => {
   })
 
   test(`http2.request${secure ? ' secure' : ' '}`, t => {
-    t.plan(36)
+    t.plan(38)
 
     resetAgent(3, (data) => {
       t.strictEqual(data.transactions.length, 2)
@@ -339,7 +339,11 @@ isSecure.forEach(secure => {
         })
 
         var req = client.request({ ':path': '/sub' })
-        req.on('end', () => client.destroy())
+        t.ok(agent.currentSpan === null, 'the http2 span should not spill into user code')
+        req.on('end', () => {
+          t.ok(agent.currentSpan === null, 'the http2 span should *not* be the currentSpan in user event handlers')
+          client.destroy()
+        })
         req.pipe(stream)
       } else {
         stream.respond({
